--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -3,8 +3,8 @@
   "WHO ARE WE?": "QUI SOMMES-NOUS ?",
   "GET A QUOTE": "OBTENIR UN DEVIS",
   "CONTACT": "CONTACT",
-  "PRODUCTS": "produits",
-  "price": "{{price}} €",
+  "PRODUCTS": "Produits",
+  "price": "{{price}} dt",
   "Language": "Langue",
   "English": "ANGLAIS",
   "French": "FRANCAIS",
